# trial-hrr-mysql

./: .gitignore  README.md
examples/: hrr-examples.cabal
examples/src/: Comment.hs  DataSource.hs  Main.hs  Tagging.hs  User.hs
hrr-examples/src/: Blog.hs  BlogEntry.hs  Main.hs  Tag.hs  User.hs
mysql-server/: Vagrantfile  init.sql  my.cnf.j2  mysql.yml  mysql_setup.yml  provision.sh
