name:                hrr-examples
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
copyright:           Copyright (c) 2015 Sho Kuroda
build-type:          Simple
cabal-version:       >=1.10

executable hrr-examples
  hs-source-dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:
      base >=4.7 && <5
    , template-haskell >=2.8
    , HDBC >=2.3
    , HDBC-mysql >=0.6 && <0.7
    , HDBC-session
    , names-th
    , relational-query
    , relational-query-HDBC
    , persistable-record
    , time

